--- a/Analisis/EVALUACION_1 _ CACERES_ BARRALES.Rmd
+++ b/Analisis/EVALUACION_1 _ CACERES_ BARRALES.Rmd
@@ -1,83 +1,56 @@
 ---
 title: "Evaluacion_1_Jorge_Caceres"
-author: "jorge Cáceres Barrales"
+author: "Jorge Alejandro Cáceres Barrales"
 date: "2024-06-11"
 output: html_document
 ---
 
-# Titulo
+# Evaluacion 1 - Análisis Estadístico - Jorge Cáceres B.
 
-# Objetivo
-
-## Descripcion de Variables
+## Datos
 
 Los datos fueron recogidos aplicando una encuesta a una muestra de estudiantes universitarios. Es un data frame con 400 observaciones y 18 variables, las cuales se describen abajo.
 
-```{r}
-data <- data.frame(
-  Variable = c("ID", "Sexo", "Edad", "Fuma", "Estatura", "Colegio", "Estrato", 
-               "Financiación", "Acumulado", "Gastos", "Ingreso", "Clases", 
-               "Pandemia", "Clases_virtuales", "Estadística", "Inseguridad", 
-               "Vida_cotidiana", "Puntaje"),
-  Significado = c("Código de identificación", "Género", "Edad", "Fuma", "Estatura", 
-                  "Tipo de colegio de procedencia", "Estrato socio-económico de su vivienda", 
-                  "¿Cuál fue tu medio de financiación para estudiar en la universidad?", 
-                  "Promedio acumulado al finalizar el semestre anterior", 
-                  "Promedio de sus gastos mensuales (en 10 miles de $)", 
-                  "Ingreso mensual de su padre (en millones de $)", "¿Qué tipo de clases prefiere?", 
-                  "Cree usted que la pandemia afectó económicamente a su familia", 
-                  "Me preocupa que tal vez no pueda entender los contenidos de mis asignaturas como me gustaría", 
-                  "Me gusta la estadística", "Me siento inseguro cuando hago problemas de estadística", 
-                  "Utilizo la estadística en la vida cotidiana", "Porcentaje de acierto en una determinada prueba"),
-  Codificación = c("Código de identificación", "Masculino, femenino", "Numérica de 12.0 a 30.0", 
-                   "Si=Fuma; No=No fuma", "Alta, Baja, Media", "Privado; Público", 
-                   "1=Bajo; 2=Medio; 3=Alto", "Beca; Crédito; Otro", "Numérica de 0.0 a 5.0", 
-                   "Numérica de 23.0 a 90.0", "Numérica de 1.0 a 3.0", "Virtual; Presencial", 
-                   "1= Totalmente de acuerdo; 2= En desacuerdo; 3= Ni de acuerdo, ni en desacuerdo; 4= De acuerdo; 5= Totalmente de acuerdo", 
-                   "1= Totalmente de acuerdo; 2= En desacuerdo; 3= Ni de acuerdo, ni en desacuerdo; 4= De acuerdo; 5= Totalmente de acuerdo", 
-                   "1= Totalmente de acuerdo; 2= En desacuerdo; 3= Indeciso; 4= De acuerdo; 5= Totalmente de acuerdo", 
-                   "1= Totalmente de acuerdo; 2= En desacuerdo; 3= Indeciso; 4= De acuerdo; 5= Totalmente de acuerdo", 
-                   "1= Totalmente de acuerdo; 2= En desacuerdo; 3= Indeciso; 4= De acuerdo; 5= Totalmente de acuerdo", 
-                   "Numérica de 0 a 100%")
-)
-
-kable(data, "html") %>%
-  kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive"),
-                full_width = F) %>%
-  row_spec(0, bold = T, background = "#D3D3D3") %>%
-  row_spec(1:nrow(data), background = c("#F5F5F5", "#FFFFFF"))
-```
+| **Variable**     | **Significado**                                                                              | **Codificación**                                                                                                        |
+|:-----------------|:-----------------------|:-----------------------------|
+| ID               | Código de identificación                                                                     | Código de identificación                                                                                                |
+| Sexo             | Género                                                                                       | Masculino, femenino                                                                                                     |
+| Edad             | Edad                                                                                         | Numérica de 12.0 a 30.0                                                                                                 |
+| Fuma             | Fuma                                                                                         | Si=Fuma; No=No fuma                                                                                                     |
+| Estatura         | Estatura                                                                                     | Alta, Baja, Media                                                                                                       |
+| Colegio          | Tipo de colegio de procedencia                                                               | Privado; Público                                                                                                        |
+| Estrato          | Estrato socio-económico de su vivienda                                                       | 1=Bajo; 2=Medio; 3=Alto                                                                                                 |
+| Financiación     | ¿Cuál fue tu medio de financiación para estudiar en la universidad?                          | Beca; Crédito; Otro                                                                                                     |
+| Acumulado        | Promedio acumulado al finalizar el semestre anterior                                         | Numérica de 0.0 a 5.0                                                                                                   |
+| Gastos           | Promedio de sus gastos mensuales (en 10 miles de \$)                                         | Numérica de 23.0 a 90.0                                                                                                 |
+| Ingreso          | Ingreso mensual de su padre (en millones de \$)                                              | Numérica de 1.0 a 3.0                                                                                                   |
+| Clases           | ¿Qué tipo de clases prefiere?                                                                | Virtual; Presencial                                                                                                     |
+| Pandemia         | Cree usted que la pandemia afectó económicamente a su familia                                | 1= Totalmente de acuerdo; 2= En desacuerdo; 3= Ni de acuerdo, ni en desacuerdo; 4= De acuerdo; 5= Totalmente de acuerdo |
+| Clases_virtuales | Me preocupa que tal vez no pueda entender los contenidos de mis asignaturas como me gustaría | 1= Totalmente de acuerdo; 2= En desacuerdo; 3= Ni de acuerdo, ni en desacuerdo; 4= De acuerdo; 5= Totalmente de acuerdo |
+| Estadística      | Me gusta la estadística                                                                      | 1= Totalmente de acuerdo; 2= En desacuerdo; 3= Indeciso; 4= De acuerdo; 5= Totalmente de acuerdo                        |
+| Inseguridad      | Me siento inseguro cuando hago problemas de estadística                                      | 1= Totalmente de acuerdo; 2= En desacuerdo; 3= Indeciso; 4= De acuerdo; 5= Totalmente de acuerdo                        |
+| Vida_cotidiana   | Utilizo la estadística en la vida cotidiana                                                  | 1= Totalmente de acuerdo; 2= En desacuerdo; 3= Indeciso; 4= De acuerdo; 5= Totalmente de acuerdo                        |
+| Puntaje          | Porcentaje de acierto en una determinada prueba                                              | Numérica de 0 a 100%                                                                                                    |
 
 ## Carga Librerias
 
-carga de librerias necesarias para realizar el analisis de datos
+Carga de las librerias necesarias para realizar el análisis de datos.
 
 ```{r}
 cat("\014")
 
 # Cargar librerías necesarias
 library(dplyr)
-# library(ggplot2)  # No usada
-# library(lubridate)  # No usada
-# library(scales)  # No usada
-# library(prophet)  # No usada
 library(stringr)
-# library(caret)  # No usada
-# library(corrplot)  # No usada
-# library(e1071)  # No usada
-# library(xgboost)  # No usada
-# library(ROSE)  # No usada
-# library(pROC)  # No usada
-# library(factoextra)  # No usada
-library(knitr)
 library(kableExtra)
 library(readxl)
 library(summarytools)
-# library(htmltools)  # No usada
 
 ```
 
 ## Carga de Datos y Funciones
+
+Importar la base de datos a utilizar y las funciones que permitirán realizar el análisis estadístico.
 
 ```{r}
 
@@ -86,24 +59,43 @@ source("https://raw.githubusercontent.com/jkcrs1/Code/main/Analisis/funciones.R"
 
 # Carga Archivo xlsx
 file_path <- "/Users/jorge/Documents/GitHub/Code/Analisis/Estudiantes.xlsx"
-estudiantes_data <- read_excel(file_path, sheet = "Estudiant")
+estudiantes_total <- read_excel(file_path, sheet = "Estudiant")
 ```
 
 ## Tipos de Variables
+
+Utilizando el paquete summarytools, se genera un resumen detallado de todas las variables del dataframe. Este informe incluye estadísticas descriptivas, frecuencias, gráficos de barras para variables categóricas y otras visualizaciones útiles para el análisis de datos.
 
 ```{r}
 # Configurar el entorno de summarytools para HTML
 st_options(style = "rmarkdown", plain.ascii = FALSE)
 
 # Obtener un resumen de los datos utilizando summarytools y renderizar en HTML
-dfSummary(estudiantes_data) %>%
+dfSummary(estudiantes_total) %>%
   print(method = 'render')
 ```
 
-## Normalizacon de las variables
+## Seleccionar Muestra de 150 registros.
+
+Seleccionar una muestra aleatoria de 150 registros basada en la desviación estándar. Esta muestra se utilizará para realizar un análisis sobre un conjunto de datos reducido pero que sigue siendo representativo del conjunto de datos original.
 
 ```{r}
 
+# Calcular la muestra aleatoria según Desviación Estándar
+cant <- nrow(estudiantes_total)
+sd <- sd(estudiantes_total$Gastos)
+n <- tam.muestra(alfa = 0.05, epsilon = 1.95, s = sd, N = cant)
+set.seed(2)
+cant <- sample(nrow(estudiantes_total), n)
+estudiantes_data <- estudiantes_total[cant, ]
+
+```
+
+## Normalización de las Variables
+
+Se procede a normalizar y limpiar el conjunto de datos, asegurando que las variables estén en el formato correcto y que los valores nulos se manejen adecuadamente.
+
+```{r}
 
 # Aplicar todas las transformaciones y normalizaciones
 estudiantes_data <- estudiantes_data %>%
@@ -118,22 +110,59 @@ estudiantes_data <- estudiantes_data %>%
     Ingreso = as.numeric(Ingreso)
   ) %>%
   distinct() 
+```
 
+## Valores Nulos y reemplazar por la Mediana
 
-# Identificacion de Valores Nulos
-sum(is.na(estudiantes_data))
+En caso que se encuentren valores, se reemplazan por el valor de la mediana de cada variable.
 
+```{r}
+#Reemplazar valores nulos por la mediana
+estudiantes_data <- estudiantes_data %>%
+  mutate(across(everything(), reemplazar_por_mediana))
+```
 
-# Valores nulos por columna:
-print(colSums(is.na(estudiantes_data)))
+## Traformación de variables categoricas a Factor
 
+Para asegurar un análisis e interpretación adecuados de los datos, las variables categóricas se transforman a factores.
 
-print("Filas con valores nulos:")
-print(head(estudiantes_data %>% filter_all(any_vars(is.na(.)))))
+```{r}
 
+# Definir el orden de las categorías para las variables ordinales
+niveles_uno <- c("Totalmente En Desacuerdo", "En Desacuerdo", "Ni De Acuerdo, Ni En Desacuerdo",
+             "De Acuerdo", "Totalmente De Acuerdo")
+niveles_dos <- c("Totalmente En Desacuerdo", "En Desacuerdo", "Indeciso",
+             "De Acuerdo", "Totalmente De Acuerdo")
+niveles_tres <- c("En Desacuerdo", "De Acuerdo", "Ni De Acuerdo, Ni En Desacuerdo")
+niveles_estatura <- c("Baja", "Media", "Alta")
+niveles_sexo <- c("Masculino", "Femenino")
+niveles_colegio <- c("Privado", "Publico")
+niveles_financiacion <- c("Beca", "Credito", "Otro")
+
+# Lista de variables a transformar
+variables_ordinales_uno <- c("Clases_virtuales", "Pandemia")
+variables_ordinales_dos <- c("Estadistica", "inseguridad", "vida_cotidiana")
+variables_ordinales_tres <- c("Pandemia")
+variables_estatura <- c("Estatura")
+variables_sexo <- c("Sexo")
+variables_colegio <- c("Colegio")
+variables_financiacion <- c("Financiacion")
+
+# Transformar las variables a factor con los niveles definidos
+estudiantes_data <- estudiantes_data %>%
+  mutate(across(all_of(variables_ordinales_uno), ~factor(., levels = niveles_uno, ordered = TRUE))) %>%
+  mutate(across(all_of(variables_ordinales_dos), ~factor(., levels = niveles_dos, ordered = TRUE))) %>%
+  mutate(across(all_of(variables_ordinales_tres), ~factor(., levels = niveles_tres, ordered = TRUE))) %>%
+  mutate(across(all_of(variables_estatura), ~factor(., levels = niveles_estatura, ordered = TRUE))) %>%
+  mutate(across(all_of(variables_sexo), ~factor(., levels = niveles_sexo, ordered = TRUE))) %>%
+  mutate(across(all_of(variables_colegio), ~factor(., levels = niveles_colegio, ordered = TRUE))) %>%
+  mutate(across(all_of(variables_financiacion), ~factor(., levels = niveles_financiacion, ordered = TRUE)))
+ 
 ```
 
 ## Seleccion de Variables Cuantitativa
+
+Selección y resumen detallado de tres variables cuantitativas.
 
 ```{r}
 # Seleccionar tres variables cuantitativas
@@ -145,6 +174,8 @@ print(dfSummary(cuanti_vars), method = 'render')
 
 ## Seleccion de Variables Cualiitativa
 
+Selección y resumen detallado de cinco variables cualiitativa.
+
 ```{r}
 # Seleccionar cinco variables cualitativas
 cuali_vars <- estudiantes_data %>% select(Sexo, Colegio, Financiacion, Clases_virtuales, Pandemia)
@@ -153,29 +184,16 @@ cuali_vars <- estudiantes_data %>% select(Sexo, Colegio, Financiacion, Clases_vi
 print(dfSummary(cuali_vars), method = 'render')
 ```
 
+## Detalle por Variables Cuantitativas.
+
+Se realiza un gráfico para cada variable cuantitativa con el fin de explicar su distribución en el conjunto de datos analizado.
+
+### Variable: Sexo
+
 ```{r}
-# Variables para gráficos
 var_x <- "Sexo"
-var_tipo_grafico <- "torta"
-
-# Gráfico de torta
-grafico(
-  data = estudiantes_data, 
-  var  = var_x, 
-  tipo_grafico = var_tipo_grafico
-)
-```
-
-### Interpretacion
-
-jajs
-
-```{r}
-# Variables para gráficos
-var_x <- "Colegio"
 var_tipo_grafico <- "anillo"
 
-# Gráfico de torta
 grafico(
   data = estudiantes_data, 
   var  = var_x, 
@@ -183,24 +201,33 @@ grafico(
 )
 ```
 
+### Interpretación
+
+Se observa que hay una mayor proporción de estudiantes femeninos (56%) en comparación con los estudiantes masculinos (44%).
+
+### Variable: Colegio
+
 ```{r}
+var_x <- "Colegio"
+var_tipo_grafico <- "barra"
 
-
-
-# Generar algunos gráficos
-p1 <- grafico(estudiantes_data, "Sexo", "torta")
-p2 <- grafico(estudiantes_data, "Colegio", "anillo")
-
-grid_plot(p1, p2)
-
+grafico(
+  data = estudiantes_data, 
+  var  = var_x, 
+  tipo_grafico = var_tipo_grafico
+)
 ```
 
+### Interpretación
+
+Se observa una distribución equitativa de estudiantes entre colegios Privados y Públicos, con 75 estudiantes en cada tipo de colegio.
+
+### Variable: Financiación
+
 ```{r}
-# Variables para gráficos
 var_x <- "Financiacion"
 var_tipo_grafico <- "anillo"
 
-# Gráfico de torta
 grafico(
   data = estudiantes_data, 
   var  = var_x, 
@@ -208,23 +235,37 @@ grafico(
 
 ```
 
+### Interpretación
+
+Se visualiza que las opciones de financiamiento están divididas casi en tercios para cada tipo, destacando que hay una ligera preferencia por el crédito (38%) en comparación con las otras opciones: becas (32.7%) y otros métodos (29.3%).
+
+### Variable: Clases Virtuales
+
 ```{r}
+var_x <- "Clases_virtuales"
+var_tipo_grafico <- "barra"
 
-# Generar algunos gráficos
-p1 <- grafico(estudiantes_data, "Ingreso", "boxplot")
-p2 <- grafico(estudiantes_data, "Gastos", "boxplot")
-p2 <- grafico(estudiantes_data, "Edad", "boxplot")
+grafico(
+  data = estudiantes_data, 
+  var  = var_x, 
+  tipo_grafico = var_tipo_grafico)
 
-grid_plot(p1, p2,p3)
 ```
 
-```{r}
+### Interpretación
 
-# Variables para gráficos
+El gráfico revela una marcada polarización en las opiniones sobre las clases virtuales, con la mayoría de los estudiantes ubicándose en los extremos de "Totalmente En Desacuerdo" (34) y "Totalmente De Acuerdo" (35). Las respuestas intermedias son menos frecuentes, con 22 estudiantes en desacuerdo y 33 de acuerdo, y 26 estudiantes sin una opinión definida, lo que indica una clara división en las percepciones.
+
+## Detalle por Variables Cualitativas
+
+Se realiza un gráfico para cada variable cualiativa con el fin de explicar su distribución en el conjunto de datos analizado.
+
+### Variable: Ingreso
+
+```{r}
 data <- estudiantes_data 
 var_x <- "Ingreso"
 
-# Gráfico de Boxplot
 var_tipo_grafico <- "boxplot"
 grafico(
   data = estudiantes_data, 
@@ -236,14 +277,14 @@ grafico(
 
 ### Interpretación
 
-La mayoría de los estudiantes tienen entre 17 y 20 años, con una edad mediana de 18, una distribución sesgada a la derecha que indica una mayor concentración de edades entre 18 y 20 años. Ademas y varios valores atípicos por encima de los 24 años, lo que sugiere la presencia de algunos estudiantes significativamente mayores.
+La mediana de los ingresos de los estudiantes es de 1.33 millones de pesos. El rango intercuartil (IQR), que oscila entre 1.09 y 1.8 millones de pesos, refleja una variabilidad en los ingresos. La mayoría de los ingresos se sitúan entre 1.09 y 1.8 millones de pesos, con una tendencia general hacia valores más altos.
+
+### Variable: Gastos
 
 ```{r}
-# Variables para gráficos
 data <- estudiantes_data 
 var_x <- "Gastos"
 
-# Gráfico de Boxplot
 var_tipo_grafico <- "boxplot"
 grafico_cuantitativo(
   data = data, 
@@ -252,12 +293,16 @@ grafico_cuantitativo(
 )
 ```
 
-```{r}
-# Variables para gráficos
-data <- estudiantes_data 
-var_x <- "Edad"
+### Intepretación
 
-# Gráfico de Boxplot
+La mediana de los gastos mensuales de los estudiantes es de 48.9. El rango intercuartil (IQR), que va de 38.78 a 62.03, refleja una alta variabilidad en los gastos. La mayoría de los gastos se encuentra entre 38.78 y 62.03, con una tendencia a extenderse hacia valores más altos, lo que indica que algunos estudiantes tienen gastos mensuales considerablemente más elevados.
+
+### Variable: Puntaje
+
+```{r}
+data <- estudiantes_data 
+var_x <- "Puntaje"
+
 var_tipo_grafico <- "boxplot"
 grafico(
   data = estudiantes_data, 
@@ -266,12 +311,16 @@ grafico(
 )
 ```
 
-```{r}
+### Interpretación
 
+El gráfico muestra que la mediana de los puntajes de los estudiantes es 26, con un rango intercuartil (IQR) que varía de 19 a 34, indicando una variabilidad en los puntajes. Se observan valores atípicos por encima de 56.5, sugiriendo que algunos estudiantes tienen puntajes significativamente distintos del promedio. La mayoría de los puntajes se encuentran entre 19 y 34, aunque hay una dispersión hacia valores más altos.
+
+## Relacion entre Gastos e Ingresos
+
+```{r}
 var_x <- "Gastos"
 var_y <- "Ingreso"
 
-# Gráfico de torta
 var_tipo_grafico <- "dispercion"
 grafico_dispersion(
   data = estudiantes_data, 
@@ -280,15 +329,21 @@ grafico_dispersion(
 )
 ```
 
+### Interpretacion
+
+La covarianza de 2.172012 indica una relación directa entre las dos variables. El coeficiente de correlación de 0.26365 revela una correlación positiva débil, sugiriendo que, aunque los ingresos tienden a aumentar con los gastos, esta relación no es muy fuerte.
+
+El gráfico muestra que los estudiantes con mayores gastos suelen tener ingresos más altos, aunque esta tendencia es moderada. La dispersión de los puntos y el bajo coeficiente de correlación indican una considerable variabilidad en la relación entre gastos e ingresos.
+
+## Analisis de variable: Financiamiento y Clases
+
+Creación de una tabla de contingencia para las variables Financiacion y Clases
+
 ```{r}
-
-# Crear una tabla de contingencia para las variables Financiacion y Clases
 tabla_contingencia <- table(estudiantes_data$Financiacion, estudiantes_data$Clases)
-
-# Mostrar la tabla de contingencia
-print(tabla_contingencia)
-
 ```
+
+Determinar la probabilidad de elegir a un estudiante al azar, que tenga beca y prefiera clases virtuales
 
 ```{r}
 # Número total de estudiantes
@@ -299,8 +354,11 @@ beca_virtual <- sum(estudiantes_data$Financiacion == "Beca" & estudiantes_data$C
 
 # Calcular la probabilidad
 prob_beca_virtual <- beca_virtual / total_estudiantes
+
 cat("Probabilidad de elegir a un estudiante con beca y que prefiera clases virtuales: ", prob_beca_virtual, "\n")
 ```
+
+Si se elige a un estudiante al azar que prefiere clases presenciales, ¿Cuál es la probabilidad que el estudiante tenga beca?
 
 ```{r}
 # Número de estudiantes que prefieren clases presenciales
@@ -312,6 +370,20 @@ beca_presencial <- sum(estudiantes_data$Financiacion == "Beca" & estudiantes_dat
 # Calcular la probabilidad condicional
 prob_beca_dado_presencial <- beca_presencial / presencial_total
 cat("Probabilidad de que un estudiante que prefiere clases presenciales tenga beca: ", prob_beca_dado_presencial, "\n")
+
+```
+
+Se sabe que el 36% de los estudiantes tiene crédito, el 31% de los estudiantes financia los estudios por otro medio y el resto tiene beca. Un asistente social, indica que hay estudiantes que presentan problemas con el pago de la mensualidad, de lo que determina que son el 5% de los que tienen beca, el 2% de los que tienen crédito, y 3% de los estudiantes que utiliza otro medio de pago.
+
+Diagrama de Árbol.
+
+```         
+                  Financiamiento
+                /        |        \
+              Beca    Crédito     Otro
+            /     \    /    \    /     \
+        Pagado  No    Pagado  No   Pagado  No
+               Pagado         Pagado         Pagado
 ```
 
 ```{r}
@@ -325,43 +397,54 @@ prob_problema_beca <- 0.05
 prob_problema_credito <- 0.02
 prob_problema_otro <- 0.03
 
+```
+
+Determine la probabilidad de que un estudiante tenga problema con el pago.
+
+```{r}
 # Probabilidad total de tener problemas con el pago
 prob_problema_total <- (prob_problema_beca * prob_beca) + (prob_problema_credito * prob_credito) + (prob_problema_otro * prob_otro)
 cat("Probabilidad de que un estudiante tenga problemas con el pago: ", prob_problema_total, "\n")
+```
 
+Si el estudiante tiene problemas con el pago. ¿Cuál es la probabilidad que tenga beca?
+
+```{r}
 # Probabilidad de tener beca dado que tiene problemas con el pago (utilizando el Teorema de Bayes)
 prob_beca_dado_problema <- (prob_problema_beca * prob_beca) / prob_problema_total
 cat("Probabilidad de que un estudiante con problemas con el pago tenga beca: ", prob_beca_dado_problema, "\n")
 ```
 
-```         
-            Financiamiento
-            /      |      \
-        Beca    Crédito    Otro
-       /  |      |  \     /  |
-      P   NP    P   NP   P   NP
-```
+## Analisis de variable: Fuma
+
+Tabla de frecuencias relativas con la variable Fuma
 
 ```{r}
-# I. Tabla de frecuencias relativas para la variable Fuma
+# Tabla de Frecuencia
 frecuencias_absolutas <- table(estudiantes_data$Fuma)
 frecuencias_relativas <- prop.table(frecuencias_absolutas)
 print(frecuencias_relativas)
 ```
 
+Si se eligen 25 estudiantes al azar, ¿Cuál es la probabilidad de que 10 de ellos si fuma?
+
 ```{r}
-# II. Probabilidad de que 10 de 25 estudiantes fumen
+# Probabilidad de que 10 de 25 estudiantes fumen
 prob_fuma <- frecuencias_relativas["Si"]
 prob_10_de_25 <- dbinom(10, size = 25, prob = prob_fuma)
 cat("Probabilidad de que 10 de 25 estudiantes fumen: ", prob_10_de_25, "\n")
 ```
 
+Si se eligen 30 estudiantes al azar, ¿Cuál es la probabilidad de que a lo más 15 de ellos si fuma?
+
 ```{r}
-# III. Probabilidad de que a lo más 15 de 30 estudiantes fumen
+# Probabilidad de que a lo más 15 de 30 estudiantes fumen
 prob_a_lo_mas_15_de_30 <- pbinom(15, size = 30, prob = prob_fuma)
 cat("Probabilidad de que a lo más 15 de 30 estudiantes fumen: ", prob_a_lo_mas_15_de_30, "\n")
 
 ```
+
+Determine el número esperado de estudiante que no fuma.
 
 ```{r}
 # IV. Número esperado de estudiantes que no fuman
@@ -372,9 +455,12 @@ cat("Número esperado de estudiantes que no fuman: ", esperado_no_fuma, "\n")
 
 ```
 
-```{r}
+## Analisis de variable: Ingresos
 
-# I. Media y desviación estándar poblacional de la variable ingreso
+¿Cuál es la media y la desviación estándar poblacional de la variable ingreso?
+
+```{r}
+# Media y desviación estándar poblacional de la variable ingreso
 media_ingreso <- mean(estudiantes_data$Ingreso)
 desviacion_estandar_ingreso <- sd(estudiantes_data$Ingreso)
 
@@ -382,16 +468,19 @@ cat("Media de Ingreso: ", media_ingreso, "\n")
 cat("Desviación Estándar de Ingreso: ", desviacion_estandar_ingreso, "\n")
 ```
 
-```{r}
-# II. Probabilidad de que el ingreso sea a lo más de $1.500.000
-# Convertimos 1.500.000 a millones para que coincida con la unidad de la variable
-ingreso_1_5_millones <- 1.5
-prob_ingreso_1_5_millones <- pnorm(ingreso_1_5_millones, mean = media_ingreso, sd = desviacion_estandar_ingreso)
-cat("Probabilidad de que el ingreso sea a lo más de $1.500.000: ", prob_ingreso_1_5_millones, "\n")
-```
+¿Cuál es la probabilidad de que el ingreso sea a lo más de \$1.500.000?
 
 ```{r}
-ingreso_1_millon <- 1.0
-prob_ingreso_mas_1_millon <- 1 - pnorm(ingreso_1_millon, mean = media_ingreso, sd = desviacion_estandar_ingreso)
-cat("Probabilidad de que el ingreso sea de más de $1.000.000: ", prob_ingreso_mas_1_millon, "\n")
+# Probabilidad de que el ingreso sea a lo más de $1.500.000
+ingreso_1.5 <- 1.5
+prob_ingreso_1.5 <- pnorm(ingreso_1.5, mean = media_ingreso, sd = desviacion_estandar_ingreso)
+cat("Probabilidad de que el ingreso sea a lo más de $1.500.000: ", prob_ingreso_1.5, "\n")
+```
+
+¿Cuál es la probabilidad de que el ingreso sea de más de \$1.000.000?
+
+```{r}
+ingreso_1 <- 1.0
+prob_ingreso_1 <- 1 - pnorm(ingreso_1, mean = media_ingreso, sd = desviacion_estandar_ingreso)
+cat("Probabilidad de que el ingreso sea de más de $1.000.000: ", prob_ingreso_1, "\n")
 ```
